--- a/src/pages/EyfsDashboard/EyfsDashboard.module.css
+++ b/src/pages/EyfsDashboard/EyfsDashboard.module.css
@@ -3,9 +3,10 @@
   align-items: center;
   color: black;
   background-color: white;
-  margin: 1em;
-  padding: 2em;
+  margin: 0.5em;
+  padding: 1em;
   border-radius: 10px;
+  height: calc(95vh - 5em);
 }
 
 .heading {
