--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: "Quicksand", sans-serif;
+  /* font-family: "Quicksand", sans-serif; */
+  font-family: "Andika", sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,8 +15,13 @@ body {
   margin: 0;
   background-color: #afcbd9;
   overflow-x: hidden;
+  color: #20272c;
 }
 
 h1 {
-  margin-top: 0;
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
 }
