--- a/src/pages/DetailedDashboard/DetailedDashboard.module.css
+++ b/src/pages/DetailedDashboard/DetailedDashboard.module.css
@@ -4,7 +4,7 @@
   color: black;
   background-color: white;
   margin: 0.5em;
-  padding: 1em;
+  padding: 0.5em;
   border-radius: 10px;
   height: calc(95vh - 5em);
   display: grid;
@@ -12,7 +12,7 @@
   grid-gap: 0.5em;
 }
 
-.detailedBox {
+.Box {
   border: 1px solid red;
   height: 100%; /* Ensure grid items fill the entire height of their container */
 }
@@ -26,7 +26,8 @@
 }
 
 .nestedClock {
-  border: 1px solid green;
   border-radius: 10px;
   padding: 0;
+  margin: 0;
+  display: inline-block;
 }
