--- a/src/pages/EyfsDashboard/EyfsDashboard.module.css
+++ b/src/pages/EyfsDashboard/EyfsDashboard.module.css
@@ -4,11 +4,23 @@
   color: black;
   background-color: white;
   margin: 0.5em;
-  padding: 1em;
+  padding: 0.5em;
   border-radius: 10px;
   height: calc(95vh - 5em);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5em;
 }
 
-.heading {
-  font-size: 90px;
+.eyfsBox {
+  border: 1px solid red;
+  height: 100%; /* Ensure grid items fill the entire height of their container */
+}
+
+.eyfsContainer > :first-child {
+  grid-column: 1 / span 3;
+}
+
+.eyfsContainer > :nth-child(3n) {
+  margin-right: 0; /* Remove right margin for every third item */
 }
