playing around with using children prop for buttons

--- a/src/pages/SimpleDashboard/SimpleDashboard.module.css
+++ b/src/pages/SimpleDashboard/SimpleDashboard.module.css
@@ -2,11 +2,21 @@
   text-align: center;
   align-items: center;
   color: black;
-  background-color: white;
+  background-color: #f6f6f6;
   margin: 0.5em;
   padding: 1em;
   border-radius: 10px;
   height: calc(95vh - 5em);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.simpleContainer > :first-child {
+  grid-column: 1 / span 3;
+}
+
+.simpleBox {
+  border-radius: 10px;
 }
 
 .heading {
