--- a/src/components/MyClock/MyClock.module.css
+++ b/src/components/MyClock/MyClock.module.css
@@ -1,7 +1,10 @@
 .clock {
   font-size: 46px;
   color: orange;
-  padding: 0 1em;
-  border: 1px solid grey;
+  padding: 0 0.5em;
+  display: inline;
   margin: 0;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 15px;
 }
