--- a/src/pages/DetailedDashboard/DetailedDashboard.module.css
+++ b/src/pages/DetailedDashboard/DetailedDashboard.module.css
@@ -12,7 +12,7 @@
   grid-gap: 0.5em;
 }
 
-.Box {
+.detailedBox {
   border: 1px solid red;
   height: 100%; /* Ensure grid items fill the entire height of their container */
 }
