mobile view created

--- a/src/pages/DetailedDashboard/DetailedDashboard.module.css
+++ b/src/pages/DetailedDashboard/DetailedDashboard.module.css
@@ -13,7 +13,8 @@
 }
 
 .detailedBox {
-  border: 1px solid red;
+  border: 1px solid #afcbd9;
+  border-radius: 10px;
   height: 100%; /* Ensure grid items fill the entire height of their container */
 }
 
