--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,10 @@ h1 {
 h2 {
   margin: 0;
 }
+
+
+/* media query for desktop */
+@media screen and (min-width: 1024px) {
+  .list p,
+  .links a {
+   
