--- a/src/pages/CreateDashboard/CreateDashboard.module.css
+++ b/src/pages/CreateDashboard/CreateDashboard.module.css
@@ -4,7 +4,7 @@
   color: black;
   background-color: white;
   margin: 1em;
-  padding: 2em;
+  padding: 1em;
   border-radius: 10px;
 }
 
@@ -20,6 +20,7 @@
 .createBox {
   border: 1px solid #457992;
   border-radius: 20px;
+  padding: 0 1rem;
 }
 
 .createBox:nth-child(2) {
