--- a/src/pages/CreateLesson/CreateLesson.module.css
+++ b/src/pages/CreateLesson/CreateLesson.module.css
@@ -1,13 +1,41 @@
-.lessonContainer {
+.createContainer {
   text-align: center;
   align-items: center;
   color: black;
   background-color: white;
   margin: 1em;
-  padding: 2em;
+  padding: 1em;
   border-radius: 10px;
 }
 
 .heading {
   font-size: 90px;
+}
+
+.createForms {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.createBox {
+  border: 1px solid #457992;
+  border-radius: 20px;
+  padding: 0 1rem;
+}
+
+.createBox:nth-child(2) {
+  grid-row: span 2; /* This will make the 2nd createBox span two rows */
+}
+/*styles for reset button which is NOT a regular UI component*/
+
+.createBox button {
+  text-align: left;
+  display: flex;
+}
+
+.buttonContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
+  align-items: center;
 }
