--- a/src/components/DragandDrop/Column.css
+++ b/src/components/DragandDrop/Column.css
@@ -3,8 +3,9 @@
   border-radius: 5px;
   padding: 10px;
   width: 80%;
-  max-width: 500px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 15px;
 }
