--- a/src/components/DragandDrop/test.css
+++ b/src/components/DragandDrop/test.css
@@ -7,3 +7,13 @@
   gap: 50px;
   margin-top: 10px;
 }
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
+  justify-content: flex-start;
+  border: 1px solid black;
+  border-radius: 10px;
+}
