--- a/src/components/newtest/Test.css
+++ b/src/components/newtest/Test.css
@@ -1,5 +1,6 @@
 .container {
   background-color: white;
+  margin-left: 4px;
 }
 
 .widget {
@@ -10,4 +11,27 @@
   border-radius: 20px;
   padding: 5px;
   text-align: center;
+}
+
+.menu-bar {
+  background-color: bisque;
+  padding: 5px;
+  border: 5px;
+  margin-top: 600px;
+  width: 90%;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-left: 45px;
+}
+
+button {
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: white;
+  background-color: #457992;
+  text-decoration: none;
+  border: none;
+  margin-left: 3px;
 }
